3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

common/map.c: Allow map tiling paths to be reletive.
server/main.c: Template maps: Impliment using fixed maps as templates, and
  improve reletive path support for them.
Alex Schultz 2006-01-06

Make SIGNs (including Magic Mouths) trigger for DMs again. Does not reduce the
counter if in 'wizpass mode.
--
server/apply.c: In apply_sign() ignore DMs.
Andreas Kirschbaum 2006-01-04

server/spell_effect.c: Apply patch 1394861 - fixes magic walls.  In conjuction
  with archetype changes, look at the spell object (and not created wall)
  to see if it blocks.
server/c_chat.c: Apply patch 1389113 - orcknuckle messages appear in
   same window.
MSW 2006-01-01

Prefer marked item when throwing objects.
--
server/skills.c: In find_throw_ob() prefer marked item.
Andreas Kirschbaum 2006-01-01

Make EXITs affect DM players again.
--
common/object.c: In check_move_on() ignore only slow movement penalties for
   DMs.
server/apply.c: In move_apply() ignore anything but EXITs for DM players.
Andreas Kirschbaum 2006-01-01

Make forked lightning correctly traverse tiled maps.
--
server/spell_attack.c: In forklightning() insert forked part into correct map.
Andreas Kirschbaum 2006-01-01

Properly unready forgotten spells. Prevents crashing the server if casting a
forgotten spell.
--
include/sproto.h: Add new prototype.
server/{apply.c,gods.c}: Call player_remove_range_ob() when forgetting a
   spell.
server/player.c: Add player_remove_range_ob() to unready a given object.
Andreas Kirschbaum 2006-01-01

Improve the commands learn_spell and forget_spell: now these commands accept
partial spell names and print sensible error messages if they fail.